@@ -1,9 +1,9 @@
-I126250000
-.I-49800
-.I308
-.I1
-.S'FM N'
+I126340000
+.I-40200
+.I372
+.I0
+.S'AM'
 p0
-.I-73
-.I200
+.I-98
+.I233
 .
