@@ -114,3 +114,6 @@
 	Inicio generalización zonas superior e inferior
 	Menus actualizados a dos zonas. 
 
+20160309
+	AUTOSBASE
+	Ajuste de dev con boton medio del raton
